# cartao-do-new

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  lista.txt  pyproject.toml  requirements.txt  users.txt
apps/accounts/: admin.py  auth_urls.py  auth_views.py  forms.py  models.py  urls.py  views.py
apps/billing/: admin.py  daily.py  models.py  services.py  tasks.py  urls.py  utils.py  views.py  webhooks.py
apps/cards/: admin.py  apps.py  markdown.py  models.py  services.py  signals.py  urls.py  views.py  views_public.py
apps/common/: codes.py  images.py  mail.py  nickname_blacklist.py  phone.py  rate_limit.py  urls.py  validators.py
apps/dashboard/: urls.py  views.py
apps/delivery/: __init__.py  admin.py  apps.py  models.py  urls.py  views_admin.py  views_public.py
apps/jornal/: __init__.py  admin.py  apps.py  markdown.py  models.py  selectors.py  signals.py  urls.py  views.py
apps/media/: urls.py  views.py
apps/metering/: admin.py  models.py  urls.py  utils.py  views.py
apps/notifications/: api.py  apps.py  models.py  tasks.py  urls.py  views.py
config/: celery.py  ibge-nomes.json  settings.py  settings_search.py  settings_viewer.py  urls.py  urls_search.py  urls_viewer.py  views_errors.py
docs/: cards.md
nginx/: nginx.conf  proxy_params.conf  stripe_allow.sh
templates/: base.html
tests/: conftest.py  test_agenda_list.py  test_auth_flows.py  test_billing_daily.py  test_card_about.py  test_flow.py  test_gallery_service_links.py  test_jornal.py  test_nickname_blacklist.py  test_public_booking.py  test_reschedule_flow.py  test_search.py  test_viewer_delivery.py
(+192 files in other folders)
